--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -205,4 +205,9 @@
   .Card-Container-Dark {
     flex: 1;
   }
+
+  .Paragraph,.Paragraph-Dark{
+    font-size: 1rem;
+    margin:20px;
+  }
 }
